Prepare patch release 20250619 (#45775)
* Adds HTTP/2 support to JDK HTTP and OkHttp-based HttpClients in clientcore (#45758)

Adds HTTP/2 support to JDK HTTP and OkHttp-based HttpClients in clientcore

* Updated list of libraries to patch in patch-release.yml

* Reset sources for azure-mixedreality-remoterendering to the release version 1.1.37.

* Prepare azure-mixedreality-remoterendering for 1.1.38 patch release.

* Reset sources for azure-data-schemaregistry-jsonschema to the release version 1.0.1.

* Prepare azure-data-schemaregistry-jsonschema for 1.0.2 patch release.

* Reset sources for azure-storage-file-share to the release version 12.26.0.

* Prepare azure-storage-file-share for 12.26.1 patch release.

* Reset sources for azure-storage-internal-avro to the release version 12.15.0.

* Prepare azure-storage-internal-avro for 12.15.1 patch release.

* Reset sources for azure-communication-messages to the release version 1.1.3.

* Prepare azure-communication-messages for 1.1.4 patch release.

* Reset sources for azure-messaging-eventhubs to the release version 5.20.3.

* Prepare azure-messaging-eventhubs for 5.20.4 patch release.

* Reset sources for azure-security-confidentialledger to the release version 1.0.28.

* Prepare azure-security-confidentialledger for 1.0.29 patch release.

* Reset sources for azure-ai-translation-document to the release version 1.0.1.

* Prepare azure-ai-translation-document for 1.0.2 patch release.

* Reset sources for azure-ai-metricsadvisor to the release version 1.2.6.

* Prepare azure-ai-metricsadvisor for 1.2.7 patch release.

* Reset sources for azure-communication-identity to the release version 1.6.4.

* Prepare azure-communication-identity for 1.6.5 patch release.

* Reset sources for azure-storage-blob to the release version 12.30.0.

* Prepare azure-storage-blob for 12.30.1 patch release.

* Reset sources for azure-ai-translation-text to the release version 1.1.2.

* Prepare azure-ai-translation-text for 1.1.3 patch re